# dofus-graal-back

./: .env  .env.test  .gitignore  Cargo.toml  diesel.toml  docker-compose.yml  makefile  schema.sql  test.ipynb
.github/workflows/: ci.yml  test.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2024-12-24-114001_base_table/: down.sql  up.sql
migrations/2024-12-24-114028_main_table/: down.sql  up.sql
migrations/2024-12-24-114054_many_to_many/: down.sql  up.sql
src/: cli.rs  constant.rs  lib.rs  main.rs  operations.rs  schema.rs  test.ipynb  test_utils.rs
src/api/: client.rs  mod.rs  models.rs  params.rs
src/api/output_sample/: consumables.json  cosmetics.json  equipment.json  item-quest.json  mounts.json
src/db/: connection.rs
src/db/operations/: crud.rs  handler.rs  insert_statics.rs  item.rs  loader.rs  mod.rs
src/db_operations/: crud.rs  handler_item_meta.rs  insert_item.rs  insert_statics.rs  mod.rs
src/models/: character.rs  character_class.rs  dofus_models.rs  effect_single.rs  element.rs  image_urls.rs  item.rs  item_category.rs  item_effect.rs  item_meta_models.rs  item_model.rs  item_recipe.rs  item_type.rs  mod.rs  range.rs  recipe_single.rs  server.rs  users_models.rs
src/models/statics/: mod.rs
src/models/statics/dofus_meta/: insertable.rs  mod.rs
src/models/statics/item/: insertable.rs  mod.rs  queryable.rs
src/models/statics/item_meta/: insertable.rs  mod.rs  queryable.rs
src/scripts/: delete_items.rs  mod.rs  sync_items.rs
src/server/: mod.rs
tests/: macro_test.rs
