[package]
name = "dofus_graal_back"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.6", features = ["postgres", "r2d2"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
clap = {version ="4.5.23", features = ["cargo"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
futures = "0.3"